# samuel-demo

./: .env.example  .gitignore  Dockerfile  SPEC.md  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-ui/src/: App.tsx  Architecture.tsx  Counter.tsx  Dashboard.tsx  Leaderboard.tsx  Login.tsx  ModeButtons.tsx  PieChart.tsx  index.css
admin-ui/src/lib/: api.ts
public-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
public-ui/src/: App.tsx  Chat.tsx  index.css
public-ui/src/lib/: api.ts  storage.ts
scripts/: fly-secrets.sh
src/piestore/: __init__.py  agent.py  auth.py  config.py  db.py  detection.py  main.py  modes.py  names.py  secrets_gen.py  secrets_tool.py  state.py  tools.py
src/piestore/prompts/: system.txt
src/piestore/routes/: admin.py  chat.py  leaderboard.py  ws.py
src/piestore/seeds/: 01_schema.sql  02_products.sql  03_tickets.sql
tests/: conftest.py  load_test.py  test_api.py  test_detection.py  test_modes.py  test_names.py  test_secrets_gen.py  test_secrets_tool.py
